# 8bitbot

./: .babelrc  .env.defaults  .eslintrc.js  .gitignore  .npmignore  .prettierignore  8bitbot.html  LICENSE  LICENSE.md  Makefile  README.md  clean.js  compiler.json  hardhat.config.ts  install-ipfs.sh  manifest.json  media.json  package.json  snowpack.config.js  tsconfig.json  waffle.json  webpack.config.js
.github/workflows/: chain.yml  node.js.yml
LICENSES/: AGPL-3.0-or-later.txt  README.md
contracts/: Divider.sol  Migrations.sol
contracts/src/: BasicToken.sol  CompoundLender.sol  Ownable.sol  Token.sol
contracts/src/errors/: LibOwnableRichErrors.sol  LibRichErrors.sol
contracts/src/interfaces/: IOwnable.sol
contracts/test/: TestOwnable.sol
deploy/: 001_deploy_dai_curve.ts  001_deploy_ownable.ts  001_deploy_test_ownable.ts  001_deploy_token.ts
ipfs/0x.js_6.0.15/: index.min.js
ipfs/contract-addresses_3.0.3/: index.js
ipfs/orbit-db_0.21.4/: orbitdb.min.js
ipfs/orbit-db_0.24.2/: orbitdb.min.js
ipfs/subproviders_5.0.1/: index.js
ipfs/web3-wrapper_6.0.10/: index.js
lib/: CMakeLists.txt  build-ci.sh  emscripten-helper.sh  orbit.js  webgl.js  webrtc_video.js
lib/api/: imgproc.cpp  imgproc.hpp
lib/common/: emscripten_utils.h  image_data.cpp  image_data.h
lib/motion_tracker/: motion_tracker.cpp  motion_tracker.h  motion_tracker.hpp  motion_tracker_embinder.cpp  vision_graph.cpp  vision_graph.hpp
lib/scene_detector/: embinder.cpp  scene_detector.cpp  scene_detector.h  scene_detector_embinder.cpp
lib/stream_decoder/: stream_decoder.cpp  stream_decoder.h  stream_decoder_embinder.cpp
lib/utils/: emscripten_utils.cpp  image_utils.cpp  image_utils.h
public/: index.css  index.html  manifest.json
public/motion_tracker/: .gitignore  motion_tracker_worker.js
public/scene_detector/: .gitignore  scene_detector_worker.js
scripts/: accounts.ts  deploy.ts  run.ts  sample-script.ts
src/: 8bitbot.sol  8bitbot.t.sol  configs.ts  constants.ts  environment.ts  index.js  ipfs.js  marketplace.js  motiontracker.js  motiontracker.ts  orbitdb.js  peertube-api.ts  provider-engine.ts  provider-utils.ts  torrentdecoder.js  utils.js  utils.ts  web3-provider-engine.ts  world.js
src/models/: index.ts
src/models/videos/: index.ts  video-constant.model.ts  video-file-metadata.ts  video-file.model.ts  video-resolution.enum.ts  video-streaming-playlist.model.ts  video-streaming-playlist.type.ts  video-transcoding-fps.model.ts
src/player/: player-local-storage.ts  player-manager.ts  translations-manager.ts  utils.ts  video-player.ts  videojs-typings.ts
src/player/p2p-media-loader/: hls-plugin.ts  p2p-media-loader-plugin.ts  redundancy-url-manager.ts  segment-url-builder.ts  segment-validator.ts  segment-validators.ts
src/player/webtorrent/: chunk-store.ts  video-renderer.ts  webtorrent-plugin.ts
src/web3/: configs.ts  constants.ts  hardhat.ts  types.ts
src/workers/: motion_tracker_module.js  scene_detector_module.js  stream_decoder_module.js
tasks/: faucet.ts
test/: BasicToken.test.ts  ENS.test.ts  erc20.spec.js  setup.js  test-0x.ts  test-basic-token.ts  test-deploy.ts  test-ens.ts  test-ffmpeg.js  test-hardhat.ts  test-hls.js  test-ipfs.js  test-motion-tracker.js  test-opencv.js  test-opensea.js  test-ownable.ts  test-scene-detector.js  test-stream-decoder.js  test-token.ts  test-video.html  test-video.scss  test-video.ts  test-web3-provider.ts  test-web3.ts  test-webtorrent.js  test-world.js
test/0x/: test-0x.ts  test-exchange-subscribe.ts  test-fill-order-erc20.ts  test-fixture.ts  test-ownable.ts
test/player/: test-video-player.ts
tools/: .gitignore  Makefile  manifest.mk  npm-contracts.sh  npm-depends.sh  npm-install.sh  npm-paths.sh  npm-scripts.sh  npm-tasks.sh  npm-utils.sh  setup_paths.mk  setup_stages.mk
tools/depends/0x/: 0003-Fix-Typescript-errors-in-0x-contracts-erc1155.patch  0004-Fix-Typescript-errors-in-0x-contracts-erc20.patch  0006-Fix-Typescript-errors-in-0x-contracts-exchange.patch  0007-Fix-swapped-tasks-in-package.json.patch  package.mk
tools/depends/0x.js/: 0001-Fix-build-error-due-to-ganache-version-mismatch.patch
tools/depends/@0x/: 0001-Fix-Typescript-errors-in-0x-order-utils.patch  0002-Fix-Typescript-errors-in-0x-contracts-utils.patch  0005-Fix-Typescript-errors-in-0x-contracts-asset-proxy.patch  package.mk
tools/depends/ade/: package.mk
tools/depends/android-sdk/: package.mk
tools/depends/bittorent-tracker/: 0001-temp-Add-debug-logging.patch
tools/depends/bittorrent-tracker/: 0001-Fix-runtime-error-due-to-wrapped-import.patch
tools/depends/cartesi-vm/: package.mk
tools/depends/ceres-solver/: package.mk
tools/depends/codecbox.js/: package.mk
tools/depends/crosstool-ng/: package.mk
tools/depends/debug/: 0001-Debug-loggin.patch
tools/depends/duplexer3/: 0001-Replace-stream-package-with-readable-stream.patch
tools/depends/eigen/: package.mk
tools/depends/emscripten/: package.mk
tools/depends/eth-block-tracker/: 0001-Fix-runtime-error-due-to-wrapped-import.patch
tools/depends/ethereum-waffle/: 0001-package.json-Fix-module-entry-point.patch
tools/depends/ffmpeg/: package.mk
tools/depends/ffmpeg.js/: 0001-Fix-building-with-fastcomp.patch  0002-Disable-zlib.patch  0003-Modify-.gitmodules-for-hard-linking.patch
tools/depends/ganache-core/: 0001-Add-debug-logging.patch  0001-Fix-wrapped-import.patch  0001-More-debug-logging.patch  0001-Update-for-new-version-of-ethereumjs-tx.patch
tools/depends/google-flags/: package.mk
tools/depends/google-log/: package.mk
tools/depends/googletest/: package.mk
tools/depends/hardhat/: 0001-Ignore-exception-when-decoding-rich-errors.patch
tools/depends/hardhat-deploy/: 0001-Fix-error-detecing-license-in-block.patch
tools/depends/hardhat-deploy-ethers/: 0001-Fix-errors-due-to-duplicate-identifiers.patch
tools/depends/hdkey/: 0001-Replace-crypto-builtins-with-npm-packages.patch
tools/depends/keep3r/: package.mk
tools/patches/: 0001-Unexpected-token-building-libp2p.patch
world/: generate_world.sh  graph.json  hls_encode.sh  png_crush.sh
(+49 files in other folders)
